--- a/src/app/teams/teams.component.scss
+++ b/src/app/teams/teams.component.scss
@@ -11,6 +11,11 @@
   text-align: center;
 }
 
+.team-card-style {
+  margin-top: 3px;
+  align-items: center;
+}
+
 .position-name {
   font-size: 20px;
   margin-bottom: 2px 0;
