--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,60 +1,70 @@
 .form-check-label {
-    font-size: 15px;
-    color: white;
+  font-size: 15px;
+  color: white;
+}
+
+.search-spacing {
+  margin-left: 10px;
+}
+
+.search-select-height {
+  /* search and select weren't the same size and it bugged me */
+  height: 40px;
+}
+
+mat-form-field {
+  width: 100% !important;
+  height: 70px;
+}
+
+.form-select {
+  width: 100px;
+}
+
+.custom-navbar {
+  background-color: var(--custom-nav-color, inherit);
+}
+
+.normal-button {
+  background-color: black;
+  display: inline-block;
+  padding: 10px 20px;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.container-fluid {
+  padding: 5px;
+  max-width: 100%;
+  align-items: center;
+}
+
+.container {
+  padding: 0px;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1000px) {
+  .container {
+    justify-content: center !important;
   }
 
-  .search-and-select {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  .navbar-nav {
+    flex-direction: row;
   }
 
-  .search-select-height {
-    /* search and select weren't the same size and it bugged me */
-    height: 40px;
+  .navbar-nav .nav-item {
+    margin-bottom: 0.5rem;
   }
 
-  mat-form-field {
-    width: 100% !important;
-    height: 70px;
+  .year-select,
+  .form-control {
+    width: 100%;
   }
 
-  .form-select {
-    width: 100px;
-  }
-
-  .custom-navbar {
-    background-color: var(--custom-nav-color, inherit);
-  }
-
-  .normal-button {
+  .mobile-button {
     background-color: black;
-    display: inline-block;
-    padding: 10px 20px;
     color: white;
-    text-decoration: none;
-    border-radius: 5px;
   }
-
-  @media (max-width: 1000px) {
-    .navbar-nav {
-      flex-direction: row;
-    }
-
-    .navbar-nav .nav-item {
-      margin-bottom: 0.5rem;
-    }
-
-    .year-select,
-    .form-control {
-      width: 100%;
-    }
-
-    .mobile-button {
-      background-color: black;
-      color: white;
-    }
-
-    .search-and-select {
-    }
-  }
+}
