--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,57 +2,56 @@
   class="navbar navbar-expand-lg navbar-dark bg-dark d-flex align-items-center"
   [style.background-color]="navColor + ' !important'"
 >
-  <div class="container-fluid" style=" overflow: hidden;">
-    <a [routerLink]="['']">
-      <img src="assets/logo.JPEG" class="main-logo" />
-    </a>
-
+  <div class="container-fluid">
     <!-- Button group for mobile layout -->
-    <div class="d-lg-none">
-      <div class="btn-group">
-        <button
-          type="button"
-          class="btn btn-outline-secondary mobile-button"
-          [routerLink]="['/about']"
-        >
-          About
-        </button>
-        <button
-          type="button"
-          class="btn btn-outline-secondary mobile-button"
-          [routerLink]="['/leaderboard']"
-        >
-          Leaderboards
-        </button>
-        <button
-          type="button"
-          class="btn btn-outline-secondary mobile-button"
-          [routerLink]="['/standings']"
-        >
-          Standings
-        </button>
-        <a
-          href="https://ko-fi.com/pierreanalytics"
-          target="_blank"
-          class="btn btn-outline-secondary mobile-button"
-          >Donate</a
-        >
-      </div>
-    </div>
-
-    <!-- Buttons for desktop layout -->
-    <div class="d-none d-lg-flex me-auto mb-2 mb-lg-0">
-      <ul class="navbar-nav">
-        <li class="nav-item">
+    <div class="container" style="justify-content: flex-start">
+      <a [routerLink]="['']">
+        <img src="assets/logo.JPEG" class="main-logo" />
+      </a>
+      <div class="d-lg-none">
+        <div class="btn-group">
           <button
             type="button"
-            class="btn-outline-secondary normal-button"
+            class="btn btn-outline-secondary mobile-button"
             [routerLink]="['/about']"
           >
             About
           </button>
-        </li>
-        <!-- <li class="nav-item">
+          <button
+            type="button"
+            class="btn btn-outline-secondary mobile-button"
+            [routerLink]="['/leaderboard']"
+          >
+            Leaderboards
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary mobile-button"
+            [routerLink]="['/standings']"
+          >
+            Standings
+          </button>
+          <a
+            href="https://ko-fi.com/pierreanalytics"
+            target="_blank"
+            class="btn btn-outline-secondary mobile-button"
+            >Donate</a
+          >
+        </div>
+      </div>
+      <!-- Buttons for desktop layout -->
+      <div class="d-none d-lg-flex me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn-outline-secondary normal-button"
+              [routerLink]="['/about']"
+            >
+              About
+            </button>
+          </li>
+          <!-- <li class="nav-item">
         <button
           type="button"
           class="btn-outline-secondary normal-button"
@@ -61,80 +60,79 @@
           Scores
         </button>
       </li> -->
-        <li class="nav-item">
-          <button
-            type="button"
-            class="btn-outline-secondary normal-button"
-            [routerLink]="['/leaderboard']"
-          >
-            Leaderboards
-          </button>
-        </li>
-        <li class="nav-item">
-          <button
-            type="button"
-            class="btn-outline-secondary normal-button"
-            [routerLink]="['/standings']"
-          >
-            Standings
-          </button>
-        </li>
-        <li class="nav-item">
-          <a
-            href="https://ko-fi.com/pierreanalytics"
-            target="_blank"
-            class="btn-outline-secondary normal-button"
-          >
-            Donate
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="row">
-      <div class="col-6 col-md-4">
-        <div class="search-and-select search-select-height">
-          <!-- Replace mat-form-field with a regular select element -->
-          <select class="form-select year-select" (change)="selectYear($event)">
-            <option value="null">Year</option>
-            <option value="2018">2018</option>
-            <option value="2019">2019</option>
-            <option value="2020">2020</option>
-            <option value="2021">2021</option>
-            <option value="2022">2022</option>
-            <option value="2023">2023</option>
-            <option value="2024">2024</option>
-          </select>
-        </div>
-        </div>
-        <div class="col-6 col-md-8 search-and-select">
-          <input
-            type="search"
-            class="form-control search-select-height"
-            placeholder="Search Player Name"
-            [formControl]="searchControl"
-            (input)="onSearchInputChange()"
-          />
-          <div
-            class="dropdown-menu dropdown-menu-right"
-            aria-labelledby="dropdownMenuButton"
-            *ngIf="searchControl.value && filteredPlayers.length > 0"
-          >
-            <a
-              class="dropdown-item"
-              href="#"
-              *ngFor="let player of filteredPlayers | slice : 0 : 7"
-              [routerLink]="['/', player.playerID, 'year', year]"
-              (click)="clearSearchInput()"
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn-outline-secondary normal-button"
+              [routerLink]="['/leaderboard']"
             >
-              <img
-                src="{{
-                  'https://assets.nhle.com/mugs/nhl/latest/' +
-                    player.playerID +
-                    '.png'
-                }}"
-                class="logo"
-              />{{ player.firstName }} {{ player.lastName }}
+              Leaderboards
+            </button>
+          </li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn-outline-secondary normal-button"
+              [routerLink]="['/standings']"
+            >
+              Standings
+            </button>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://ko-fi.com/pierreanalytics"
+              target="_blank"
+              class="btn-outline-secondary normal-button"
+            >
+              Donate
             </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="container" style="justify-content: flex-end">
+      <div class="search-select-height">
+        <!-- Replace mat-form-field with a regular select element -->
+        <select class="form-select year-select" (change)="selectYear($event)">
+          <option value="null">Year</option>
+          <option value="2018">2018</option>
+          <option value="2019">2019</option>
+          <option value="2020">2020</option>
+          <option value="2021">2021</option>
+          <option value="2022">2022</option>
+          <option value="2023">2023</option>
+          <option value="2024">2024</option>
+        </select>
+      </div>
+      <div class="search-spacing">
+        <input
+          type="search"
+          class="form-control search-select-height"
+          placeholder="Search Player Name"
+          [formControl]="searchControl"
+          (input)="onSearchInputChange()"
+        />
+        <div
+          class="dropdown-menu dropdown-menu-right"
+          aria-labelledby="dropdownMenuButton"
+          *ngIf="searchControl.value && filteredPlayers.length > 0"
+        >
+          <a
+            class="dropdown-item"
+            href="#"
+            *ngFor="let player of filteredPlayers | slice : 0 : 7"
+            [routerLink]="['/', player.playerID, 'year', year]"
+            (click)="clearSearchInput()"
+          >
+            <img
+              src="{{
+                'https://assets.nhle.com/mugs/nhl/latest/' +
+                  player.playerID +
+                  '.png'
+              }}"
+              class="logo"
+            />{{ player.firstName }} {{ player.lastName }}
+          </a>
         </div>
       </div>
     </div>
