--- a/src/app/standings/standings.component.html
+++ b/src/app/standings/standings.component.html
@@ -1,7 +1,7 @@
 <nav-bar></nav-bar>
-<h1 class="standings-header">Standings</h1>
-<div class="last-updated">
-  <p>Last Updated: {{ lastUpdated }} EST</p>
+<div class="standings-header">
+  <h2 style="margin-bottom: 0px">Standings</h2>
+  Last Updated: {{ lastUpdated }} EST
 </div>
 <div class="standings-container">
   <mat-card class="division-card score-card" *ngFor="let division of divisions">
