--- a/src/app/teams/teams.component.scss
+++ b/src/app/teams/teams.component.scss
@@ -1,7 +1,11 @@
 .plain-link {
-  color: inherit; /* Inherit the color from the parent */
-  text-decoration: none; /* Remove underline */
-  cursor: pointer; /* Show pointer cursor on hover */
+  color: inherit; /* Inherit the color from the parent when not hovered */
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.plain-link:hover {
+  color: steelblue;
 }
 
 .team-name {
@@ -51,7 +55,6 @@
 
 .team-card {
   font-family: Roboto;
-  justify-content: start;
   width: 400px;
   display: flex;
   flex-direction: column;
@@ -84,10 +87,72 @@
   height: auto;
 }
 
+.team-logo-container {
+  display: flex;
+  justify-content: center;
+}
+
+.player-headshot {
+  width: 50px;
+  height: auto;
+  border: 2px solid black;
+}
+
 ul {
   list-style-type: none; /* removes the bullet points */
   padding: 0;
   margin: 0;
+}
+
+.team-badge-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.team-badge {
+  border: 3px solid black;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 5px;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  color: white;
+}
+
+@keyframes wiggle {
+  0%,
+  100% {
+    transform: rotateZ(0deg);
+  }
+  25% {
+    transform: rotateZ(5deg);
+  }
+  75% {
+    transform: rotateZ(-5deg);
+  }
+}
+
+.team-badge:hover {
+  animation: wiggle 0.3s ease-in-out;
+}
+
+.table-container th,
+.table-container td {
+  border: 1px solid #ccc;
+  padding: 4px;
+  text-align: center;
+}
+
+.table-container table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid #ccc;
+}
+
+.table-container th {
+  background-color: #f0f0f0;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -98,7 +163,9 @@ ul {
   .roster-container {
     flex-direction: column; /* Change flex direction to column for stacking on mobile */
     width: 100%;
-    text-align: center;
+    padding-left: 30%;
+    text-align: start;
+    justify-content: left;
   }
 
   .divide-line-roster {
