--- a/src/app/leaderboard/leaderboard.component.scss
+++ b/src/app/leaderboard/leaderboard.component.scss
@@ -1,6 +1,9 @@
 .plain-link {
-  /* make the link look like normal text*/
-  color: inherit;
+  color: inherit; /* Inherit the color from the parent when not hovered */
   text-decoration: none;
   cursor: pointer;
+}
+
+.plain-link:hover {
+  color: steelblue;
 }
