--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -24,16 +24,22 @@
                   />
                 </div>
                 <p>
-                  <strong>Team:</strong> {{ player.team }}
-                  <img
-                    src="{{ 'assets/' + player.team + '.png' }}"
-                    class="logo"
-                  />
+                  <strong>Team: </strong>
+                  <a
+                    [routerLink]="['/teams', player.teamId]"
+                    class="plain-link"
+                  >
+                    {{ player.team }}
+                    <img
+                      src="{{ 'assets/' + player.team + '.png' }}"
+                      class="logo"
+                    />
+                  </a>
                 </p>
                 <p><strong>Birth Date:</strong> {{ player.birthDate }}</p>
                 <p><strong>Position:</strong> {{ player.position }}</p>
                 <p><strong>Handedness:</strong> {{ player.handedness }}</p>
-                <p><strong>Height:</strong> {{ player.height }}</p>
+                <p><strong>Height:</strong> {{ height }}</p>
                 <p><strong>Weight:</strong> {{ player.weight }}</p>
                 <p>
                   <strong>Nationality:</strong>
